// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAndMatchUrl 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "resourceId": "1:1682",
    "stepId": undefined,
    "subjectId": "3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/(subjects)?/subject\\\\::subjectId/:topicPath*/:topicId/resource\\\\::resourceId/:stepId?",
  "url": "/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 2`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "subjectId": "3",
    "topicId": "topic:1:55163",
    "topicPath": undefined,
  },
  "path": "/(subjects)?/subject\\\\::subjectId/:topicPath(.*)?/:topicId",
  "url": "/subject:3/topic:1:55163",
}
`;

exports[`parseAndMatchUrl 3`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "resourceId": "1:168554",
    "stepId": undefined,
    "subjectId": "3",
    "topicId": "topic:1:173292",
    "topicPath": "topic:1:168542",
  },
  "path": "/(subjects)?/subject\\\\::subjectId/:topicPath*/:topicId/resource\\\\::resourceId/:stepId?",
  "url": "/subject:3/topic:1:168542/topic:1:173292/resource:1:168554",
}
`;

exports[`parseAndMatchUrl 4`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "resourceId": "1:168554",
    "stepId": undefined,
    "subjectId": "3",
    "topicId": "topic:1:168542",
    "topicPath": undefined,
  },
  "path": "/(subjects)?/subject\\\\::subjectId/:topicPath*/:topicId/resource\\\\::resourceId/:stepId?",
  "url": "/subject:3/topic:1:168542/resource:1:168554",
}
`;

exports[`parseAndMatchUrl 5`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "lang": "nb",
    "resourceId": "1:1682",
    "stepId": undefined,
    "subjectId": "3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/:lang/(subjects)?/subject\\\\::subjectId/:topicPath*/:topicId/resource\\\\::resourceId/:stepId?",
  "url": "/nb/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 6`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": undefined,
    "lang": "nn",
    "resourceId": "1:1682",
    "stepId": undefined,
    "subjectId": "3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/:lang/(subjects)?/subject\\\\::subjectId/:topicPath*/:topicId/resource\\\\::resourceId/:stepId?",
  "url": "/nn/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 7`] = `
Object {
  "isExact": true,
  "params": Object {
    "articleId": "4809",
  },
  "path": "/article/:articleId",
  "url": "/article/4809",
}
`;

exports[`parseAndMatchUrl 8`] = `
Object {
  "isExact": true,
  "params": Object {
    "articleId": "4809",
    "lang": "nn",
  },
  "path": "/:lang/article/:articleId",
  "url": "/nn/article/4809",
}
`;
